tests/cli_renderer_not_all/cli_renderer_not_all.exp
Error ------------------------------------------------------------------------------------------------------ test.js:6:1

Cannot cast `1` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:6:1
   6| 1 as empty; // Error: number ~> empty
      ^ [1]

References:
   test.js:6:6
   6| 1 as empty; // Error: number ~> empty
           ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:1

Cannot cast `2` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:7:1
   7| 2 as empty; // Error: number ~> empty
      ^ [1]

References:
   test.js:7:6
   7| 2 as empty; // Error: number ~> empty
           ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:1

Cannot cast `3` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:8:1
   8| 3 as empty; // Error: number ~> empty
      ^ [1]

References:
   test.js:8:6
   8| 3 as empty; // Error: number ~> empty
           ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:9:1

Cannot cast `4` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:9:1
   9| 4 as empty; // Error: number ~> empty
      ^ [1]

References:
   test.js:9:6
   9| 4 as empty; // Error: number ~> empty
           ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:10:1

Cannot cast `5` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:10:1
   10| 5 as empty; // Error: number ~> empty
       ^ [1]

References:
   test.js:10:6
   10| 5 as empty; // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:11:1

Cannot cast `6` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:11:1
   11| 6 as empty; // Error: number ~> empty
       ^ [1]

References:
   test.js:11:6
   11| 6 as empty; // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:12:1

Cannot cast `7` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:12:1
   12| 7 as empty; // Error: number ~> empty
       ^ [1]

References:
   test.js:12:6
   12| 7 as empty; // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:13:1

Cannot cast `8` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:13:1
   13| 8 as empty; // Error: number ~> empty
       ^ [1]

References:
   test.js:13:6
   13| 8 as empty; // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:1

Cannot cast `9` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:14:1
   14| 9 as empty; // Error: number ~> empty
       ^ [1]

References:
   test.js:14:6
   14| 9 as empty; // Error: number ~> empty
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:15:1

Cannot cast `10` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:15:1
   15| 10 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:15:7
   15| 10 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:1

Cannot cast `11` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:16:1
   16| 11 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:16:7
   16| 11 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:1

Cannot cast `12` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:17:1
   17| 12 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:17:7
   17| 12 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:18:1

Cannot cast `13` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:18:1
   18| 13 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:18:7
   18| 13 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:19:1

Cannot cast `14` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:19:1
   19| 14 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:19:7
   19| 14 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:20:1

Cannot cast `15` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:20:1
   20| 15 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:20:7
   20| 15 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:1

Cannot cast `16` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:21:1
   21| 16 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:21:7
   21| 16 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:22:1

Cannot cast `17` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:22:1
   22| 17 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:22:7
   22| 17 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:23:1

Cannot cast `18` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:23:1
   23| 18 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:23:7
   23| 18 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:24:1

Cannot cast `19` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:24:1
   24| 19 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:24:7
   24| 19 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:25:1

Cannot cast `20` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:25:1
   25| 20 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:25:7
   25| 20 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:26:1

Cannot cast `21` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:26:1
   26| 21 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:26:7
   26| 21 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:27:1

Cannot cast `22` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:27:1
   27| 22 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:27:7
   27| 22 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:28:1

Cannot cast `23` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:28:1
   28| 23 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:28:7
   28| 23 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:29:1

Cannot cast `24` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:29:1
   29| 24 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:29:7
   29| 24 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:30:1

Cannot cast `25` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:30:1
   30| 25 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:30:7
   30| 25 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:31:1

Cannot cast `26` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:31:1
   31| 26 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:31:7
   31| 26 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:32:1

Cannot cast `27` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:32:1
   32| 27 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:32:7
   32| 27 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:33:1

Cannot cast `28` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:33:1
   33| 28 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:33:7
   33| 28 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:34:1

Cannot cast `29` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:34:1
   34| 29 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:34:7
   34| 29 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:1

Cannot cast `30` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:35:1
   35| 30 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:35:7
   35| 30 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:36:1

Cannot cast `31` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:36:1
   36| 31 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:36:7
   36| 31 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:37:1

Cannot cast `32` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:37:1
   37| 32 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:37:7
   37| 32 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:38:1

Cannot cast `33` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:38:1
   38| 33 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:38:7
   38| 33 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:39:1

Cannot cast `34` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:39:1
   39| 34 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:39:7
   39| 34 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:40:1

Cannot cast `35` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:40:1
   40| 35 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:40:7
   40| 35 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:41:1

Cannot cast `36` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:41:1
   41| 36 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:41:7
   41| 36 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:42:1

Cannot cast `37` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:42:1
   42| 37 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:42:7
   42| 37 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:43:1

Cannot cast `38` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:43:1
   43| 38 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:43:7
   43| 38 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:44:1

Cannot cast `39` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:44:1
   44| 39 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:44:7
   44| 39 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:45:1

Cannot cast `40` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:45:1
   45| 40 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:45:7
   45| 40 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:46:1

Cannot cast `41` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:46:1
   46| 41 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:46:7
   46| 41 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:47:1

Cannot cast `42` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:47:1
   47| 42 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:47:7
   47| 42 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:48:1

Cannot cast `43` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:48:1
   48| 43 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:48:7
   48| 43 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:49:1

Cannot cast `44` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:49:1
   49| 44 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:49:7
   49| 44 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:50:1

Cannot cast `45` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:50:1
   50| 45 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:50:7
   50| 45 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:51:1

Cannot cast `46` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:51:1
   51| 46 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:51:7
   51| 46 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:52:1

Cannot cast `47` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:52:1
   52| 47 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:52:7
   52| 47 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:53:1

Cannot cast `48` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   test.js:53:1
   53| 48 as empty; // Error: number ~> empty
       ^^ [1]

References:
   test.js:53:7
   53| 48 as empty; // Error: number ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:56:6

Cannot cast object literal to object type because in property `a`: number [1] is incompatible with empty [2].
[incompatible-type]

   test.js:56:6
   56|   a: 1, // Error: number ~> empty
            ^ [1]

References:
   test.js:60:6
   60|   a: empty,
            ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:57:6

Cannot cast object literal to object type because in property `b`: number [1] is incompatible with empty [2].
[incompatible-type]

   test.js:57:6
   57|   b: 2, // Error: number ~> empty
            ^ [1]

References:
   test.js:61:6
   61|   b: empty,
            ^^^^^ [2]



... 4 more errors (only 50 out of 54 errors displayed)
To see all errors, re-run Flow with --show-all-errors
